2008-09-01  Werner Koch  <wk@g10code.com>

	* assuan-io.c: Include time.h.  Fixes bug#951.
	(_assuan_usleep): Use nanosleep only is available.

2008-03-25  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (assuan_inquire): Loop over _assuan_read_line
	for EAGAIN.

2008-03-21  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-defs.h (_assuan_usleep): New prototype.
	* assuan-io.c (_assuan_usleep): New function.
	* assuan-io-pth.c (_assuan_usleep): New function.
	* mkerrors: Do not incude <windows.h>, but assuan-defs.h.
	(_assuan_error_is_eagain): Call _assuan_usleep.

	* mkerrors [HAVE_W32_SYSTEM]: Include <windows.h>
	(_assuan_error_is_eagain) [HAVE_W32_SYSTEM]: Wait the tenth of a
	second.

2007-11-23  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (_assuan_inquire_ext_cb): Pass through return
	value from callback function.
	Suggested by Ben Kibbey <bjk@luxsci.net>.

2007-11-14  Werner Koch  <wk@g10code.com>

	* assuan-pipe-connect.c (pipe_connect_unix): Add dummy arg FLAGS.
	(pipe_connect_w32): Add arg FLAGS and start process detached if
	requested.  Changed callers to pass 0.
	(assuan_pipe_connect_ext): Pass FLAG.

2007-11-12  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-inquire.c (_assuan_inquire_ext_cb): Clear
	CTX->inquire_membuf after deallocating it.

2007-10-18  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-handler.c (std_handler_help): New function.
	(std_cmd_table): Add new command HELP.

2007-10-08  Werner Koch  <wk@g10code.com>

	* assuan-util.c (assuan_set_io_hooks): New.
	* assuan.h (struct assuan_io_hooks): New.
	(assuan_set_io_hooks, _assuan_io_hooks): Add prefix macros.
	* assuan-defs.h (_assuan_io_hooks): New.
	* assuan-io.c (do_io_read): Take all code from _assuan_io_read.
	(_assuan_io_read, _assuan_simple_read): Add hook feature.
	(do_io_write): Take all code from _assuan_io_write.
	(_assuan_io_write, _assuan_simple_write): Add hook feature.
	* assuan-io-pth.c (_assuan_simple_read, _assuan_simple_write) 