@@ -1,3 +1,8 @@
+2008-10-15  Werner Koch  <wk@g10code.com>
+
+	* assuan-logging.c (_assuan_log_printf): Flush if the format
+	string ends with a LF.
+
 2008-09-01  Werner Koch  <wk@g10code.com>
 
 	* assuan-io.c: Include time.h.  Fixes bug#951.
